# rube

./: .gitignore  Cargo.toml  README.md  bench.sh  dev.sh  profile.sh
rube/: Cargo.toml
rube-platform/: Cargo.toml
rube-platform/src/: app.rs  driver.rs  lib.rs
rube-render/: Cargo.toml
rube-render/src/: camera.rs  camera_bind_group.rs  lib.rs  lighting.rs  postprocess.rs  raymarch.rs  tree_bind_group.rs
rube-render/src/shaders/: cast.wgsl  lighting.wgsl  postprocess.wgsl  raymarch.wgsl
rube-voxel/: Cargo.toml
rube-voxel/src/: lib.rs  tree.rs
rube-voxelize/: Cargo.toml
rube-voxelize/src/: main.rs  obj.rs  vox.rs
rube/benches/: update_and_render.rs
rube/src/: bench.rs  camera.rs  indirect.rs  lib.rs  map.rs  march.rs  ray.rs  scene.rs  tree.rs
src/: camera.rs  lib.rs  main.rs
src/render/: camera.rs  driver.rs  mod.rs  postprocess.rs  raymarch.rs  tree.rs
src/render/shaders/: postprocess.wgsl  raymarch.wgsl
src/voxel/: map.rs  mod.rs  voxelize.rs
