[package]
name = "rube"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dev"]
dev = ["glazer/hot-reload", "glam/glam-assert"]

[dependencies]
glazer = { path = "../glazer", default-features = false }
glam = "0.30.9"
wgpu = "28.0.0"
pollster = "0.4.0"
tobj = "4.0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
