[workspace]
resolver = "3"
members = ["rube", "rube-voxelize", "rube-platform"]

[package]
name = "rube-bin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dev"]
dev = ["rube-platform/dev", "rube/dev"]
tracy = ["rube/tracy", "rube/dev"]

[dependencies]
rube-platform = { path = "rube-platform" }
rube = { path = "rube" }

[patch.crates-io]
tracy-client-sys = { git = "https://github.com/nagisa/rust_tracy_client", tag = "tracy-client-sys-v0.28.0" }
tracy-client = { git = "https://github.com/nagisa/rust_tracy_client", tag = "tracy-client-v0.18.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "=0.2.103"
wasm-bindgen-futures = "0.4"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.rube]
opt-level = 3

[profile.dev.package.rube-platform]
opt-level = 3
