[package]
name = "rube"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib", "rlib"]

[features]
dev = []
tracy = ["tracy-client/enable", "profiling/profile-with-tracy"]

[dependencies]
tint = { git = "https://github.com/void-scape/tint", rev = "8cf23787095301f2644487750c4a4db39a08b60e" }
rube-platform = { path = "../rube-platform" }
glam = "0.30.9"
rayon = "1.11.0"
ahash = "0.8.12"
bzip2 = "0.6.1"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
rand_xorshift = "0.5.0"
rand_core = "0.10.0"
profiling = "1.0"
tracy-client = { version = "=0.18.4", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
reqwest = "0.13.2"
